@@ -102,9 +102,8 @@ public class BasicRowHandler implements RowHandler {
   }
 
   private <T> T fillBeanProperty(ResultSet rs, Class<T> type, PropertyDescriptor[] props,
-      int[] propertyArray)
-      throws IllegalAccessException, InstantiationException, SQLException, InvocationTargetException {
-    T bean = type.newInstance();
+      int[] propertyArray) throws Exception {
+    T bean = type.getConstructor().newInstance();
     for (int i = 1; i < propertyArray.length; i++) {
       if (propertyArray[i] == PROPERTY_NOT_FOUND) {
         continue;
